# Sebastian

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  requirements.md  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo
release-notes/: v1.0.md
src/: App.js  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alarm_store.rs  main.rs
src/components/: AddAlarmModal.js  AddAlarmModal.tsx  AlarmDialog.js  AlarmDialog.tsx  AlarmForm.js  AlarmForm.tsx  AlarmList.js  AlarmList.tsx  ImportAlarmsModal.js  ImportAlarmsModal.tsx  TimePicker.js  TimePicker.tsx
src/types/: alarm.ts
