[package]
name = "sebastian"
version = "0.1.0"
description = "Sebastian alarm application powered by Tauri"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
